--- a/index.html
+++ b/index.html
@@ -10,7 +10,179 @@
 <div class="контейнер">
 <center><h1>Преднастройка<h1></center>    
 <p>Если в задании не будут использоваться встроенные репозитории, а будет возможность скачивать все пакеты из интернета, необходимо отключить проверку пакетов через cdrom зайдя по пути Nano /etc/apt/sources.list и Закоментировать находящуюся там строку.<p>
-<img src="1.png">
+<center><img src="1.png"></center>
+
+<center><h1>Задание 1 модуля 1<h1></center>  
+<p>1. Выполните базовую настройку всех устройств:</p>    
+
+<p>A. Присвоить имена в соответствии с топологией</p>
+
+<p> Примечание: Для выполнения данного задания необходимо постоянное изменение имени каждого устройства указанного на топологии (временно изменение, действует только до перезагрузки системы и не является верным выполнением задания)  </p>
+
+<p>Решение:</p>
+
+<p>Для фиксированного изменения имени компьютера, необходимо использовать команду: hostnamectl set-hostname Имя устройства</p>
+
+<p>Для изменения имени компьютера в текущем сеансе без перезагрузки можно воспользоваться командой: newgrp</p>
+
+<center><img src="2.png"></center>
+
+<center><h1>Рисунок 1 — Пример изменения имени устройства<h1></center> 
+
+<p>B. Рассчитайте IP-адресацию IPv4 и IPv6. Необходимо заполнить таблицу №1, чтобы эксперты могли проверить ваше рабочее место.</p>
+
+<p>C. Пул адресов для сети офиса BRANCH - не более 16</p>
+
+<p>D. Пул адресов для сети офиса HQ - не более 64</p>
+
+<p>Примечание: Для сетей офисов HQ (входят устройства HQ-R и HQ-SRV) и офисов BRANCH (входят устройства BR-R и BR-SRV) , необходимо рассчитать IPv4 и IPv6 адреса согласно пунктам C и D, для устройств CLI и ISP, можно выбирать адреса из пула серых адресов с стандратной маской /24 255.255.255.0 (при условии, что IP адреса этих устройтсв не будут заданы заранее или не будут указаны другие условия в задании)</p>
+
+<p>Решение:Для расчёта IPv4 адресов можно воспользоваться стандартной таблицей  масок от 24 до 32 (при условии если количество адресов в сети 256 или меньше и изменяется только последний октет в адресе)</p>
+
+<p>255.255.255.0 /24 маска — 1 сеть в которой 256 адресов от 0 до 255</p>
+
+<p>255.255.255.128 /25 маска — 2 сети в каждой из которых по 128 адресов от 0 до 127 и от 128 до 256</p>
+
+<p>255.255.255.192 /26 маска — 4 сети в каждой из которых по 64 адреса</p>
+
+<p>255.255.255.224 /27 маска — 8 сетей по 32 адреса</p>
+
+<p>255.255.255.240 /28 маска — 16 сетей по 16 адресов</p>
+
+<p>255.255.255. 248 /29 маска — 32 сети по 8 адресов</p>
+
+<p>255.255.255.252 /30 маска — 64 сети по 4 адреса</p>
+
+<p>255.255.255.254 /31 маска — 128 сетей по 2 адреса</p>
+
+<p>255.255.255.255 /32 маска — 256 сетей по 1 адресу</p>
+
+<p>Исходя из таблицы мы понимаем, что в офисе HQ используется 26 маска, а в офисе Branch используетмся 28 маска</p>
+
+<p>При изменение 3-го октета в адресе используются маски от 16 до 23, при изменении 2-го октета в адерсе используются маски от 8 до 15, при изменении 1-го октета в адресе используются маски от 1 до 7.</p>
+
+<p>В сетях IPV6 размер маски составляет 128 бит
+    Однако последние 32 бита маски (от 96 до 128) полностью идентичны маскам в IPv4, однако структура адреса отличается, так как IPv6 работает в шестнадцатиричной системе счисления размер одного октета равен 16 битам, и полный адрес имеет вид xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx , где X значения от 0 до F. Следовательно аналогом диапазона от 24 до 32 в ipv4 , будут маски от 120 до 128 в IPv6.
+    так
+    /120 маска — 1 сеть в которой 256 адресов находящиеся в диапазоне от  xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx00 до  xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxff
+    /121 маска — 2 сети в каждой из которых по 128 адресов первая сеть в диапазоне 
+    от 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx00 
+    до 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx7f 
+    вторая сеть в диапазоне 
+    от 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx80 
+    до 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxff
+</p>
+
+<p>Объяснение:</p>
+<p>Так как размер одного октета в IPv6 равняется 16 битам , в то время как в IPv4 оно равно 8 битам , изменяются лишь два последних числа в октете
+   xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx , а размер будет равен 256 битам 
+   , в случае если у нас будут 2 сети по 128 адресов, то есть в каждую сеть вместить по 128 значений (заполнение начинается всегда справа)
+   при заполнении правого значения на максимум xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx0F , 
+   левое значение увеличивается на один xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx10 
+   и происходит снова заполнение правого значения до xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx1F и т.д. 
+   пока не будут вмещены все 128 битов (от 0 до 127), 128(число битов) делим на 16 (от 0 до F) и отнимаем 1 (Так как нужно учитывать 0) 
+   = 128/16-1=80(восемь и ноль) -1 = 7F (семь ЭФ) и получаем последний адрес для первой xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx7F
+   следовательно следующая сеть начинается с 
+   xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx80
+   и заканчивается на 
+   xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxFF
+</p>
+
+<p>/122 маска — 4 сети в каждой из которых по 64 адресов первая сеть в диапазоне 
+    от 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx00 
+    до 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx3f 
+    Вторая сеть в диапазоне
+    от 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx40 
+    до 
+    xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xxxx.xx7f
+    и т.д. 
+</p>
+
+<p>/123 маска — 8 сетей по 32 адреса</p>
+
+<p>/124 маска — 16 сетей по 16 адресов</p>
+
+<P>/125 маска — 32 сети по 8 адресов</P>
+
+<p>/126 маска — 64 сети по 4 адреса</p>
+
+<p>/127 маска — 128 сетей по 2 адреса</p>
+
+<P>/128 маска — 256 сетей по 1 адресу</P>
+
+<p>Для сетевого взаимодействия можно использовать первый октет 2001, так же необходимо подобрать IP адреса (IPv4 и IPv6) которые будут устанавливаться на интерфейсах между маршрутизаторами (если иного не указано в задании, или если они не выданы заранее) </p>
+
+<table>
+    <table cellpadding="10">
+    <tr>
+      <td>Имя устройства</td>
+      <td>IP</td>
+    </tr>
+    <tr>
+      <td>CLI</td>
+      <td><p>192.168.0.2 255.255.255.0 — к ISP</p> 
+      <p>2001::3:2/120 — к ISP</p></td>
+    </tr>
+    <tr>
+      <tr>
+      <td>ISP</td>
+      <td>192.168.0.1 255.255.255.0 — к CLI</td>
+      </tr>
+        <p>2001::3:1/120 — к CLI</p>
+        <p>10.10.10.2 255.255.255.252 —  к HQ-R</p>
+        <p>10.10.10.6 255.255.255.252 — к BR-R</p>
+        <p>2001::7:2/126 — к HQ-R</p>
+        <p>2001::7:6/126 — к BR-R</p>
+      </td>
+    </tr>
+    <tr>
+        <td>HQ-R</td>
+        <td> <p>192.168.1.1 255.255.255.192 — к HQ-SRV</p>
+          <p>2001::1:1/122 — к HQ-</p>
+          <p>10.10.10.1 255.255.255.252 — к ISP</p>
+          <p>2001::7:1/126 к — ISP</p>
+        </td>
+      </tr>
+  </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
+
+
+
 </body>
 
